[project]
name = "Pyinstaller-Builds"
version = "0.1.0"
maintainers = [
    {email = "maintainers@yt-dlp.org"},
]
description = "PyInstaller builds for yt-dlp"
readme = "README.md"
requires-python = ">=3.13"
license = "Unlicense"
license-files = ["LICENSE"]

[dependency-groups]
build = [
    "build",
    "hatchling>=1.27.0",
]
pip = [
    "pip",
]
pyflakes = [
    "pyflakes~=3.4.0",
]

[tool.uv]
exclude-newer = "7 days"
